Fix sub-menu  hidden -scrollbar.

--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -94,11 +94,12 @@
     }
 
     &__item {
-        &:hover .sub-menu {
+        &--active .sub-menu {
             display: none;
         }
     }
 
+    &__item--active > &__link,
     &__item:hover > &__link {
         color: #0071dc;
         font-weight: 500;
